bk_ida/gccida/g0/get_attr_length_immediate
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/insn-attrtab.c:14270:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 14632, "get_attr_length_immediate"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/insn-attrtab.c:14270:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 14632, "get_attr_length_immediate"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/insn-attrtab.c:14500:43: error: use of undeclared identifier 'recog_data_0'
&& symbolic_operand( ( unsigned __int16 *)recog_data_0.operand[1]) 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/insn-attrtab.c:14514:55: error: use of undeclared identifier 'recog_data_0'
|| flag_pic && symbolic_operand( ( unsigned __int16 *)recog_data_0.operand[1]) ) 
                                                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/insn-attrtab.c:14551:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !aligned_operand( recog_data_0.operand[1], HImode)) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/insn-attrtab.c:14592:33: error: use of undeclared identifier 'recog_data_0'
if ( !q_regs_operand( ( __int64)recog_data_0.operand[0], 2) || ( ( x86_movx >> ix86_cpu) & 1) != 0 ) 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/insn-attrtab.c:14625:43: error: use of undeclared identifier 'recog_data_0'
&& symbolic_operand( ( unsigned __int16 *)recog_data_0.operand[1]) 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/insn-attrtab.c:14635:55: error: use of undeclared identifier 'recog_data_0'
|| flag_pic && symbolic_operand( ( unsigned __int16 *)recog_data_0.operand[1]) ) 
                                                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/insn-attrtab.c:14640:62: error: use of undeclared identifier 'recog_data_0'
else if ( flag_pic && symbolic_operand( ( unsigned __int16 *)recog_data_0.operand[1]) ) 
                                                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/insn-attrtab.c:14695:51: error: use of undeclared identifier 'recog_data_0'
|| ( unsigned int)pic_symbolic_operand( ( __int64)recog_data_0.operand[2]) ) 
                                                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/insn-attrtab.c:14707:23: error: use of undeclared identifier 'recog_data_0'
if ( !incdec_operand( recog_data_0.operand[2]) ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/insn-attrtab.c:14714:51: error: use of undeclared identifier 'recog_data_0'
|| ( unsigned int)pic_symbolic_operand( ( __int64)recog_data_0.operand[2]) ) 
                                                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/insn-attrtab.c:14725:51: error: use of undeclared identifier 'recog_data_0'
|| ( unsigned int)pic_symbolic_operand( ( __int64)recog_data_0.operand[2]) ) 
                                                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/insn-attrtab.c:14739:23: error: use of undeclared identifier 'recog_data_0'
if ( !incdec_operand( recog_data_0.operand[2]) ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/insn-attrtab.c:14744:23: error: use of undeclared identifier 'recog_data_0'
if ( !incdec_operand( recog_data_0.operand[2]) && which_alternative != 2 ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/insn-attrtab.c:14754:23: error: use of undeclared identifier 'recog_data_0'
if ( !incdec_operand( recog_data_0.operand[2]) ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/insn-attrtab.c:14759:23: error: use of undeclared identifier 'recog_data_0'
if ( !incdec_operand( recog_data_0.operand[2]) && which_alternative != 3 ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/insn-attrtab.c:14769:23: error: use of undeclared identifier 'recog_data_0'
if ( !incdec_operand( recog_data_0.operand[2]) ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/insn-attrtab.c:14807:73: error: use of undeclared identifier 'recog_data_0'
|| ( ( ( x86_double_with_add >> ix86_cpu) & 1) == 0 || !const1_operand( recog_data_0.operand[2])) 
                                                                        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_length_immediate/src/obj/insn-attrtab.o] Error 1
